spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3519,7 +3519,8 @@
 
 /* services */
 
-.pd-wordwide-sec {
+
+.pd-serv-sec{
     padding-bottom: var(--pad-bot-full);
 }
 
